Neue Projektstruktur, Login umgesetzt, Bug fixing chat

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt-nodejs" : "latest",
     "morgan": "*",
     "serve-favicon": "*",
-    "ejs": "*"
+    "ejs": "*",
+    "express-session": "*"
   }
 }
