--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "serve-favicon": "*",
     "ejs": "*",
     "express-session": "*",
-    "fs" : "*"
+    "fs" : "*",
+    "multer": "*"
   }
 }
